[package]
name = "nft_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }  
solana-program = "1.18.11"
anchor-spl = "0.30.1"
mpl-token-metadata = "4.1.1"  # This is what you need for NFT metadata
spl-token = "4.0.0"  # Add this

[profile.release]
overflow-checks = true

[dev-dependencies]
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
tokio = { version = "1.28.1", features = ["full"] }